--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ img {
   font-size: 2em;
   margin-top: 20px;
   animation: float 3s ease-in-out infinite, fadeIn 2s ease forwards;
+  text-align: center;
+  
 }
 
 @keyframes float {
@@ -187,23 +189,23 @@ img {
 
   .polaroid:nth-child(1) {
     top: 10px;
-    left: 60px;
+    left: 0px;
     transform: rotate(-10deg);
     z-index: 1;
     rotate: -10deg;
   }
 
   .polaroid:nth-child(2) {
-    top: 30px;
-    left: 150px;
+    top: 10px;
+    left: 100px;
     transform: rotate(6deg);
     z-index: 2;
     rotate: 6deg;
   }
 
   .polaroid:nth-child(3) {
-    top: 160px;
-    left: 80px;
+    top: 10px;
+    left: 200px;
     transform: rotate(-5deg);
     z-index: 3;
     rotate: -5deg;
@@ -211,11 +213,26 @@ img {
 
   .polaroid:nth-child(4) {
     top: 200px;
-    left: 170px;
+    left: 100px;
     transform: rotate(4deg);
     z-index: 4;
     rotate: 4deg;
   }
+  .polaroid:nth-child(5) {
+    top: 200px;
+    left: 0px;
+    transform: rotate(-3deg);
+    z-index: 5;
+    rotate: -7deg;
+  }
+  .polaroid:nth-child(6) {
+    top: 200px;
+    left: 200px;
+    transform: rotate(2deg);
+    z-index: 6;
+    rotate: -7deg;
+  }
+  
 
   @keyframes floatRandom {
     0% {
@@ -247,7 +264,50 @@ img {
   .polaroid {
     width: 80px;
   }
+  .polaroid:nth-child(1) {
+    top: 10px;
+    left: 0px;
+    transform: rotate(-10deg);
+    z-index: 1;
+    rotate: -10deg;
+  }
+  .polaroid:nth-child(2) {
+    top: 10px;
+    left: 80px;
+    transform: rotate(6deg);
+    z-index: 2;
+    rotate: 6deg;
+  }
+  .polaroid:nth-child(3) {
+    top: 10px;
+    left: 160px;
+    transform: rotate(-5deg);
+    z-index: 3;
+    rotate: -5deg;
+  }
+  .polaroid:nth-child(4) {
+    top: 190px;
+    left: 80px;
+    transform: rotate(4deg);
+    z-index: 4;
+    rotate: 4deg;
+  }
+  .polaroid:nth-child(5) {
+    top: 190px;
+    left: 0px;
+    transform: rotate(-3deg);
+    z-index: 5;
+    rotate: -7deg;
+  }
+  .polaroid:nth-child(6) {
+    top: 190px;
+    left: 160px;
+    transform: rotate(2deg);
+    z-index: 6;
+    rotate: -7deg;
+  }
 }
+
 
 #confetti-canvas {
   position: fixed;
